--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wheel-picker",
-  "version": "1.1.0",
+  "name": "@feidao-msz/wheel-picker",
+  "version": "0.0.1",
   "description": "仿 iOS UIPickerView 的滚动选择器",
   "main": "dist/wheelpicker.min.js",
   "keywords": [
